<resources>
    <string name="app_name">AppQuiz</string>
    <string name="contribute_body_parts">Contribute Body Parts</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name_of_the_body_part">Name of the body part</string>
    <string name="description">Description</string>
    <string name="title">Title</string>
    <string name="back">back</string>
    <string name="label_welcome">Welcome\nto\nSquids\nGame</string>
    <string name="btn_label_start">Start</string>
    <string name="sample_title">Sample Title</string>
    <string name="sample_message">\t\tThis is a sample message.</string>
    <string name="sample_label_btn_negative">Cancel</string>
    <string name="sample_label_btn_positive">Okay</string>
    <string name="label_btn_search">Search</string>
    <string name="label_title">Hello, what would you want to search?</string>
    <string name="label_search_hint">Enter word here...</string>
    <string name="label_header">Getting meaning</string>
    <string name="label_sub_header">Please wait...</string>
    <string name="sample_correct">Your answer is CORRECT!</string>

</resources>