<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/baby_squid_white"
    tools:context=".DictionaryActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="1"
        android:scaleType="fitEnd"
        app:srcCompat="@drawable/children"/>

    <TextView
        android:id="@+id/label_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/text_input_layout"
        app:layout_constraintVertical_chainStyle="packed"
        android:lines="1"
        android:text="@string/label_title"
        android:textColor="@color/baby_squid_red"
        android:textSize="24sp" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:boxStrokeErrorColor="@color/baby_squid_red_gradient_end"
        android:id="@+id/text_input_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintTop_toBottomOf="@id/label_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btn_search"
        android:background="@color/white"
        android:hint="@string/label_search_hint"
        android:textColorHint="@color/baby_squid_red_gradient_end">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etWord"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:singleLine="true"
            android:textSize="24sp"
            android:textStyle="normal"
            android:textColor="@color/black"
            android:textColorHint="@color/white" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_search"
        android:background="@drawable/bg_btn_start"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_input_layout"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/label_btn_search"
        android:textAllCaps="true"
        android:textSize="16sp"
        android:textColor="@color/white"/>

    <RelativeLayout
        android:id="@+id/layout_loading"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@color/baby_squid_white"
        android:gravity="center"
        android:visibility="gone">

        <pl.droidsonroids.gif.GifImageView
            android:id="@+id/image_baby_squid"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/baby_squid"/>

        <TextView
            android:id="@+id/label_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/image_baby_squid"
            android:layout_centerHorizontal="true"
            android:text="@string/label_header"
            android:textColor="@color/baby_squid_red"
            android:textSize="24sp"/>

        <TextView
            android:id="@+id/label_sub_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_below="@id/label_header"
            android:layout_centerHorizontal="true"
            android:text="@string/label_sub_header"
            android:textColor="@color/baby_squid_red"
            android:textSize="16sp"/>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>